test/frontend/fail/assign_value.osl
shader foo() {
    2 = 2;
}
